src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Labour_Hour__c</fullName>
        <label>Labour Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labour_Rate__c</fullName>
        <label>Labour Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deign Sent for Approval</fullName>
                </value>
                <value>
                    <fullName>Design Approved</fullName>
                </value>
                <value>
                    <fullName>Design Rejected</fullName>
                </value>
                <value>
                    <fullName>Parts Available</fullName>
                </value>
                <value>
                    <fullName>Parts Not Available</fullName>
                </value>
                <value>
                    <fullName>Parts Added</fullName>
                </value>
                <value>
                    <fullName>Parts Not Added</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <label>Service Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>